force-app/main/default/objects/AmendmentComments__c/AmendmentComments__c.object-meta.xml
<CustomObject>
    <label>Amendment Comment</label>
    <nameField>
        <displayFormat>AC-{00000}</displayFormat>
        <label>Amendment Comment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Amendment Comments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>