force-app/main/default/objects/AmendmentComments__c/fields/Amendment_Comment__c.field-meta.xml
<CustomField>
    <fullName>Amendment_Comment__c</fullName>
    <label>Amendment Comment</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>