force-app/main/default/objects/AmendmentComments__c/fields/AmendmentReason__c.field-meta.xml
<CustomField>
    <fullName>AmendmentReason__c</fullName>
    <label>Amendment Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CRGS - Typo</fullName>
            </value>
            <value>
                <fullName>CRGS - Style</fullName>
            </value>
            <value>
                <fullName>CRGS - Comprehension</fullName>
            </value>
            <value>
                <fullName>CRGS - Incomplete File</fullName>
            </value>
            <value>
                <fullName>Minister’s Office - Change of Signatory</fullName>
            </value>
            <value>
                <fullName>Minister’s Office - Delay in Review</fullName>
            </value>
            <value>
                <fullName>Minister’s Office - New Direction</fullName>
            </value>
            <value>
                <fullName>Minister’s Office - Stylistic Change(s)</fullName>
            </value>
            <value>
                <fullName>Minister’s Office - Clarification or more information sought</fullName>
            </value>
            <value>
                <fullName>Business Center advice inaccurate or incomplete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>