force-app/main/default/objects/AmendmentComments__c/fields/AmendmentTriaged__c.field-meta.xml
<CustomField>
    <fullName>AmendmentTriaged__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Amendment Triaged</label>
    <type>Checkbox</type>
</CustomField>