force-app/main/default/objects/AmendmentComments__c/fields/RelatedCase__c.field-meta.xml
<CustomField>
    <fullName>RelatedCase__c</fullName>
    <label>Related Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Amendment Comments</relationshipLabel>
    <relationshipName>AmendmentComment</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>